projeto em andamento

--- a/objetivo.html
+++ b/objetivo.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h2>Ola Mundo</h2>
+    <div id="container"><!-- <div class="descricao"> -->
+
+        <div class="descricao"> <!-- <div class="descricao"> -->
+            <h2>Jefferson Rodrigo</h2>
+            <img src="https://i.pinimg.com/736x/4c/4e/64/4c4e64a5f8d53caaf071852ef7f948b0.jpg" width="200"
+                alt="foto de Jefferson">
+            <h3>Sobre Eu</h3>
+
+            <p>Meu objetivo é me tornar um desenvolvedor web full-stack, adquirindo habilidades tanto em front-end
+                quanto em back-end. Desejo trabalhar em projetos inovadores que me permitam crescer profissionalmente e
+                contribuir
+                para o desenvolvimento de soluções tecnológicas que impactem positivamente a sociedade..</p>
+        </div>
+
+        <div class="sobre-tecnologia"> <!-- <div class="sobre-tecnologia"> -->
+            <h3>Sobre o Futuro a tecnologia</h3>
+            <p>A tecnologia tem avançado de forma impressionante, transformando todos os aspectos da vida moderna. No
+                futuro, espera-se que a inteligência artificial e a automação estejam ainda mais presentes no dia a dia,
+                facilitando tarefas e otimizando processos em diversos setores. As profissões tendem a mudar, exigindo
+                novas habilidades e maior adaptação das pessoas ao uso de ferramentas digitais. A comunicação será cada
+                vez mais instantânea e imersiva, com a expansão da realidade aumentada e do metaverso. A saúde também
+                será beneficiada, com diagnósticos mais precisos e tratamentos personalizados por meio da biotecnologia.
+                Na educação, o aprendizado será mais acessível e interativo, com recursos que se ajustam ao ritmo de
+                cada estudante. No entanto, esses avanços trazem desafios éticos e sociais, como a proteção de dados e o
+                impacto no mercado de trabalho. Espera-se que a tecnologia seja usada de forma responsável, promovendo
+                inclusão e bem-estar coletivo. O futuro tecnológico dependerá, principalmente, de como a humanidade
+                escolher utilizá-lo.</p>
+
+        </div>
+
+    </div>
+
 </body>
+
 </html>
