Alteração de Foto

--- a/objetivo.html
+++ b/objetivo.html
@@ -13,7 +13,7 @@
   </header>
 
   <section class="perfil">
-    <img src="https://i.pinimg.com/736x/4c/4e/64/4c4e64a5f8d53caaf071852ef7f948b0.jpg" 
+    <img src="imagens/foto_02.jpg" 
          alt="Foto de Jefferson" width="200">
     <h2>Sobre mim</h2>
     <p>Sou apaixonado por tecnologia e estou desenvolvendo habilidades em HTML, CSS, Git e GitHub. 
