--- a/objetivo.html
+++ b/objetivo.html
@@ -21,17 +21,34 @@
   </section>
 
   <section class="projetos">
-    <h2>Projetos</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>Projeto Futuro</h3>
-        <p>Meu primeiro site hospedado no GitHub Pages, mostrando meu aprendizado em front-end.</p>
-      </div>
-      <div class="card">
-        <h3>Repositórios GitHub</h3>
-        <p><a href="https://github.com/jefferson09-dev" target="_blank">Veja todos meus projetos</a></p>
-      </div>
-    </div>
+    <h2 class="p-h2">Projetos</h2>
+
+        <div class="cards"> <!-- 1 -->
+            <div class="card">
+                <h3>Projeto Futuro</h3>
+                <p>Meu primeiro site hospedado no GitHub Pages, mostrando meu aprendizado em front-end.</p>
+            </div>
+
+            <div class="card">
+                <h3>Repositórios GitHub</h3>
+                <p>
+                 <a href="https://github.com/jefferson09-dev" target="_blank">Veja todos meus projetos</a></p>
+                <img class="card-png" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="github-logo">
+            </div>
+        </div> <!-- 1 -->
+
+        <div class="cards"> <!-- 2 -->
+            <div class="card">
+                <h3>Projeto</h3>
+            </div>
+
+            <div class="card">
+                <h3>Repositórios GitHub</h3>
+                <p><a href="https://github.com/jefferson09-dev" target="_blank">Veja todos meus projetos</a></p>
+                <img class="card-png" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="github-logo">
+                </a>
+            </div>
+        </div> <!-- 2 -->
   </section>
 
   <footer>
